Fix spacing of some markdown elements (specially lists)

--- a/frontend/app/assets/css/base.css
+++ b/frontend/app/assets/css/base.css
@@ -598,7 +598,7 @@ p {
     margin-bottom: 1rem;
 }
 
-p:last-child {
+.markdown > p:last-child {
     margin-bottom: 0;
 }
 
